--- a/AppCenterPOC/android/app/build.gradle
+++ b/AppCenterPOC/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    compile project(':appcenter-crashes')
+    compile project(':appcenter-analytics')
     compile project(':react-native-code-push')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
