--- a/AppCenterPOC/package.json
+++ b/AppCenterPOC/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "appcenter-analytics": "1.10.0",
+    "appcenter-crashes": "1.10.0",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-code-push": "^5.4.2"
